Correción de errores y pom.xml